--- a/Sockethead.EFCore/Sockethead.EFCore.csproj
+++ b/Sockethead.EFCore/Sockethead.EFCore.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1-alpha</Version>
+    <Authors>Randall Eike</Authors>
+    <Company>Eike Consulting, LLC</Company>
+    <Product>Sockethead.EFCore</Product>
+    <Description>A set of utilities for Entity Framework Core</Description>
+    <Copyright>Copyright © 2021</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
