--- a/Sockethead.Web/appsettings.json
+++ b/Sockethead.Web/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Sockethead.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Sockethead.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "AuditLogConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Sockethead.Web.AuditLog;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
