--- a/Sockethead.Web/Sockethead.Web.csproj
+++ b/Sockethead.Web/Sockethead.Web.csproj
@@ -15,10 +15,17 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sockethead.EFCore\Sockethead.EFCore.csproj" />
+    <ProjectReference Include="..\Sockethead.Razor\Sockethead.Razor.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\AuditLogging\Controllers\" />
+    <Folder Include="Areas\AuditLogging\Views\" />
   </ItemGroup>
 
 </Project>
