--- a/Sockethead.Razor/Sockethead.Razor.csproj
+++ b/Sockethead.Razor/Sockethead.Razor.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
   
