Published Sockethead.Razor package v0.1.4

--- a/Sockethead.Razor/Sockethead.Razor.csproj
+++ b/Sockethead.Razor/Sockethead.Razor.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <Authors>Randall Eike</Authors>
     <Company>Eike Consulting, LLC</Company>
     <Description>Razor Utilities for .Net Core 5.
@@ -15,8 +15,7 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>ASP.Net Core, MVC, Razor, Grid Control</PackageTags>
     <Copyright>Copyright (c) 2021</Copyright>
-    <PackageReleaseNotes>- AJAX fast find support for SimpleGrid
-- Improvements to SimpleGrid and TwoColumnGrid
+    <PackageReleaseNotes>SimpleGrid improvements.
 </PackageReleaseNotes>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
