Sockethead.Test: Added Tests for Audit Log Cleaner

--- a/Sockethead.Test/Sockethead.Test.csproj
+++ b/Sockethead.Test/Sockethead.Test.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\Sockethead.EFCore\Sockethead.EFCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
