Sockethead.ExtensionsAndUtilities: Add collection extensions and Date utils along with unit tests

--- a/Sockethead.Test/Sockethead.Test.csproj
+++ b/Sockethead.Test/Sockethead.Test.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sockethead.EFCore\Sockethead.EFCore.csproj" />
+    <ProjectReference Include="..\Sockethead.ExtensionsAndUtilities\Sockethead.ExtensionsAndUtilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
