--- a/Sockethead.ExtensionsAndUtilities/Sockethead.ExtensionsAndUtilities.csproj
+++ b/Sockethead.ExtensionsAndUtilities/Sockethead.ExtensionsAndUtilities.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
