Sockethead.Test: Added MyRepo Tests to verify DB changes and audit log insertion policy

--- a/Sockethead.Test/Sockethead.Test.csproj
+++ b/Sockethead.Test/Sockethead.Test.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sockethead.EFCore\Sockethead.EFCore.csproj" />
+    <ProjectReference Include="..\Sockethead.Web\Sockethead.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
